2009-04-13  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_forward_event):
	Fix an underflow of pending counter.

2009-04-07  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.106.2

	* backends/xim/proxy.c (_weak_notify_conn_cb): avoid a segfault related
	to reconnection. (rhbz#488899)

	* data/xinput.sh.in.in: export IMSETTINGS_MODULE.

2009-04-06  Akira TAGOH  <tagoh@redhat.com>

	Fix no creation of .xinputrc with stopping IM. (rhbz#490587)

	* src/factory.c (_update_symlink): Use customizable homedir stored in
	IMSettingsMonitor instead of g_get_homedir.
	(imsettings_manager_real_stop_im): likewise.
	(imsettings_manager_real_stop_im): check if current IM for an user is
	same to the requested module too, to update .xinputrc.

	* tests/rhbz_490587.c: new testcase.

	* utils/imsettings-start.c (main): Use IMSETTINGS_MODULE prior to look
	up from imsettings to ensure IM running for certain locales. (rhbz#493406)

2009-04-01  Akira TAGOH  <tagoh@redhat.com>

	Have a workaround to avoid a freeze issue on applications not
	supporting reconnecting IC. (rhbz#488877)

	* backends/xim/proxy.c (xim_proxy_ic_new): new.
	(xim_proxy_ic_free): new.
	(xim_proxy_client_protocol_real_xim_create_ic_reply): create IC to keep
	availability on track.
	(xim_proxy_client_protocol_real_xim_destroy_ic_reply): destroy IC to
	manage availability.
	(xim_proxy_protocol_real_xim_trigger_notify): send XIM_ERROR back
	when IC is invalid.
	(xim_proxy_protocol_real_xim_destroy_ic): just send back DESTROY_IC
	even if IC is invalid.
	(xim_proxy_protocol_real_xim_set_ic_values): send XIM_ERROR back
	when IC is invalid.
	(xim_proxy_protocol_real_xim_get_ic_values): likewise.
	(xim_proxy_protocol_real_xim_reset_ic): likewise.
	(xim_proxy_protocol_real_xim_forward_event): just send XIM_FORWARD_EVENT
	and XIM_SYNC_REPLY as needed back even if IC is invalid.

2009-03-24  Akira TAGOH  <tagoh@redhat.com>
