@@ -19,4 +19,4 @@ which gnome-autogen.sh || {
     exit 1
 }
 ACLOCAL_FLAGS="$ACLOCAL_FLAGS -I m4macros"
-REQUIRED_AUTOMAKE_VERSION=1.9 . gnome-autogen.sh
+REQUIRED_AUTOMAKE_VERSION=1.11 . gnome-autogen.sh
