@@ -1,0 +1,6 @@
+XIM=none
+XIM_PROGRAM=/bin/true
+XIM_ARGS=
+SHORT_DESC=im-cedilla
+GTK_IM_MODULE=cedilla
+QT_IM_MODULE=xim
