@@ -1,3 +1,8 @@
+2009-07-23  Akira TAGOH  <tagoh@redhat.com>
+
+	* src/factory.c (imsettings_manager_real_whats_im_running): Support
+	immodule only configuration file.
+
 2009-04-13  Akira TAGOH  <tagoh@redhat.com>
 
 	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_forward_event):
